--- a/index.html
+++ b/index.html
@@ -39,146 +39,259 @@
 
       <!-- Resume Container Mobile -->
       <div class="resume-container__mobile container-fluid">
-        <!-- ===== Home section ===== -->
-        <section class="home">
-          <div class="home__upper row justify-content-between">
-            <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
-            <div class="home_upper_profile col-5">
-              <img
-                src="./assets/imgs/njan.jpg"
-                class="njan-profile-pic rounded-circle"
-                alt=""
-              />
+        <div class="resume-container__mobile__main">
+          <!-- ===== Home section ===== -->
+          <section class="home">
+            <div class="home__upper row justify-content-between">
+              <box-icon name="download" class="m-3 col-1 home-icons"></box-icon>
+              <div class="home_upper_profile col-5">
+                <img
+                  src="./assets/imgs/njan.jpg"
+                  class="njan-profile-pic rounded-circle"
+                  alt=""
+                />
 
-              <p class="">Patrick Prakash</p>
-              <p class="">Softwarer Engineer</p>
+                <p class="">Patrick Prakash</p>
+                <p class="">Softwarer Engineer</p>
 
-              <button>Download</button>
+                <button class="btn btn-primary">Download</button>
+              </div>
+
+              <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
             </div>
-
-            <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
-          </div>
-          <div class="home__bottom">
-            <div class="home__bottom__info">
-              <div
-                class="home__bottom__info__address d-flex align-items-center"
-              >
-                <box-icon name="map"></box-icon>
-                <span>Rose Villa, Chathamanagalam, Kozhikode</span>
-              </div>
-              <div class="home__bottom__info__email d-flex align-items-center">
-                <box-icon name="message-dots"></box-icon>
-                <span>patrickprakash8@gmail.com</span>
-              </div>
-              <div class="home__bottom__info__phone d-flex align-items-center">
-                <box-icon name="phone"></box-icon>
-                <span>+91-8129920068</span>
-              </div>
-            </div>
-            <div class="home__bottom__social">
-              <p class="d-flex justify-content-center">Social</p>
-              <div class="home__bottom__social__items">
+            <div class="home__bottom">
+              <div class="home__bottom__info">
                 <div
-                  class="
-                    home__bottom__social__item__twitter
-                    d-flex
-                    align-items-middle
-                  "
+                  class="home__bottom__info__address d-flex align-items-center"
                 >
-                  <box-icon type="logo" name="twitter"></box-icon>
-                  <p>thisispatts</p>
+                  <box-icon name="map"></box-icon>
+                  <span>Rose Villa, Chathamanagalam, Kozhikode</span>
                 </div>
                 <div
-                  class="
-                    home__bottom__social__item__linkedln
-                    d-flex
-                    align-items-middle
-                  "
+                  class="home__bottom__info__email d-flex align-items-center"
                 >
-                  <box-icon type="logo" name="linkedin-square"></box-icon>
-                  <p>patrickprakash</p>
+                  <box-icon name="message-dots"></box-icon>
+                  <span>patrickprakash8@gmail.com</span>
                 </div>
                 <div
-                  class="
-                    home__bottom__social__item__instagram
-                    d-flex
-                    align-items-middle
-                  "
+                  class="home__bottom__info__phone d-flex align-items-center"
                 >
-                  <box-icon type="logo" name="instagram"></box-icon>
-                  <p>patrickprakash</p>
+                  <box-icon name="phone"></box-icon>
+                  <span>+91-8129920068</span>
+                </div>
+              </div>
+              <div class="home__bottom__social">
+                <p class="d-flex justify-content-center">Social</p>
+                <div class="home__bottom__social__items">
+                  <div
+                    class="
+                      home__bottom__social__item__twitter
+                      d-flex
+                      align-items-middle
+                    "
+                  >
+                    <box-icon type="logo" name="twitter"></box-icon>
+                    <p>thisispatts</p>
+                  </div>
+                  <div
+                    class="
+                      home__bottom__social__item__linkedln
+                      d-flex
+                      align-items-middle
+                    "
+                  >
+                    <box-icon type="logo" name="linkedin-square"></box-icon>
+                    <p>patrickprakash</p>
+                  </div>
+                  <div
+                    class="
+                      home__bottom__social__item__instagram
+                      d-flex
+                      align-items-middle
+                    "
+                  >
+                    <box-icon type="logo" name="instagram"></box-icon>
+                    <p>patrickprakash</p>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-        </section>
-        <!-- End Home Section -->
-        <!-- ===== Profile Section ===== -->
-        <section class="profile">
-          <p class="d-flex justify-content-center">Profile</p>
+          </section>
+          <!-- End Home Section -->
+          <!-- ===== Profile Section ===== -->
+          <section class="profile">
+            <p class="d-flex justify-content-center">Profile</p>
 
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-            corporis quam odit blanditiis sit eveniet suscipit impedit
-            voluptatum eaque repudiandae.
-          </p>
-        </section>
-        <!-- End Profile Section -->
-        <!-- ===== Education Section ===== -->
-        <section class="education">
-          <p class="d-flex justify-content-center">Education</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+              corporis quam odit blanditiis sit eveniet suscipit impedit
+              voluptatum eaque repudiandae.
+            </p>
+          </section>
+          <!-- End Profile Section -->
+          <!-- ===== Education Section ===== -->
+          <section class="education">
+            <p class="d-flex justify-content-center">Education</p>
 
-          <div class="education__cards d-flex flex-column align-items-center">
-            <div class="education__card__bachelors">
-              <p class="degree">Bachelors of Technology</p>
-              <p>College</p>
-              <p class="year">2018- 2021</p>
+            <div class="education__cards d-flex flex-column align-items-center">
+              <div class="education__card--bachelors">
+                <p class="degree">Bachelors of Technology</p>
+                <p>College</p>
+                <p class="year">2018- 2021</p>
+              </div>
+              <div class="education__card--diploma">
+                <p class="degree">Bachelors of Technology</p>
+                <p>College</p>
+                <p class="year">2018- 2021</p>
+              </div>
+              <div class="education__card--x">
+                <p class="degree">Bachelors of Technology</p>
+                <p>College</p>
+                <p class="year">2018- 2021</p>
+              </div>
             </div>
-            <div class="education__card__diploma">
-              <p class="degree">Bachelors of Technology</p>
-              <p>College</p>
-              <p class="year">2018- 2021</p>
+          </section>
+          <!-- End Education Section -->
+          <!-- ===== Skills Section ===== -->
+          <section class="skills">
+            <p class="d-flex justify-content-center">Skills</p>
+            <div class="skills__list row">
+              <div class="skills__list__left col">
+                <ul>
+                  <li class="skills__list__item">HTML</li>
+                  <li class="skills__list__item">Sass</li>
+                  <li class="skills__list__item">Android</li>
+                  <li class="skills__list__item">Java</li>
+                </ul>
+              </div>
+              <div class="skills__list__right col">
+                <ul>
+                  <li class="skills__list__item">Javascript</li>
+                  <li class="skills__list__item">Deep Learning</li>
+                  <li class="skills__list__item">Devops</li>
+                  <li class="skills__list__item">Googling</li>
+                </ul>
+              </div>
             </div>
-            <div class="education__card__x">
-              <p class="degree">Bachelors of Technology</p>
-              <p>College</p>
-              <p class="year">2018- 2021</p>
+          </section>
+          <!-- End Skills Section -->
+          <!-- ===== Experience Section ===== -->
+          <section class="experience">
+            <p class="d-flex justify-content-center">Experience</p>
+            <div
+              class="experience__cards d-flex flex-column align-items-center"
+            >
+              <div class="experience__card--company-1">
+                <p class="experience__position">Software Dev</p>
+                <p class="experience__date">2020 - Present</p>
+                <p class="experience_desc">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Dicta, mollitia.
+                </p>
+              </div>
+              <div class="experience__card--company-2">
+                <p class="experience__position">Software Dev</p>
+                <p class="experience__date">2018 - 2020</p>
+                <p class="experience_desc">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Eaque aliquam suscipit nulla ex dolores animi quasi nihil
+                  possimus dignissimos doloremque?
+                </p>
+              </div>
             </div>
-          </div>
-        </section>
-        <!-- End Education Section -->
-        <!-- ===== Skills Section ===== -->
-        <section class="skills">
-          <p class="d-flex justify-content-center">Skills</p>
-          <div class="skills__list row">
-            <div class="skills__list__left col">
-              <ul>
-                <li class="skills__list__item">HTML</li>
-                <li class="skills__list__item">Sass</li>
-                <li class="skills__list__item">Android</li>
-                <li class="skills__list__item">Java</li>
-              </ul>
+          </section>
+          <!-- End Experience Section -->
+          <!-- ===== Certificates Section ===== -->
+          <section class="certificates">
+            <p class="d-flex justify-content-center">Certificates</p>
+            <div class="certificate__card--web">
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                itaque quam aliquid, tenetur sequi tempore officia consectetur
+                provident molestiae ipsum? Magnam, autem? Et culpa tempore nobis
+                ratione, iste nesciunt fugit quam, repellat porro eligendi
+                aperiam deserunt hic libero dolorem minus fugiat ipsam suscipit,
+                sequi esse unde necessitatibus obcaecati beatae aut quibusdam?
+                Optio ea tenetur eum minima necessitatibus, nemo facilis
+                quibusdam maxime? Libero praesentium soluta, iste expedita illo
+                exercitationem perspiciatis. Iste iusto quod voluptate quas odit
+                tenetur ut ea quae itaque consequuntur similique, enim
+                reiciendis? Quos reprehenderit accusantium aut voluptatem, quam
+                dolores velit magnam delectus minus iusto sed non animi sint?
+              </p>
             </div>
-            <div class="skills__list__right col">
-              <ul>
-                <li class="skills__list__item">Javascript</li>
-                <li class="skills__list__item">Deep Learning</li>
-                <li class="skills__list__item">Devops</li>
-                <li class="skills__list__item">Googling</li>
-              </ul>
+            <div class="certificate__card--android">
+              <p>Lorem ipsum dolor sit amet.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+                pariatur sint harum, cupiditate eos voluptatem, ad doloribus
+                perspiciatis nam dolore, dolorem cum animi commodi facilis rem.
+                Repudiandae quod adipisci inventore eos? Animi voluptatem ipsum
+                minus molestiae unde suscipit consequatur iste dolor, quis
+                consequuntur delectus quae, ipsa magni inventore et tempora non
+                ea amet fugiat hic officiis. Ut, iste labore illum aperiam ipsam
+                repellendus, optio odit hic, necessitatibus maxime et temporibus
+                consectetur! Fugiat repellat doloribus velit. Accusamus ipsam
+                est nam autem.
+              </p>
             </div>
-          </div>
-        </section>
-        <!-- End Skills Section -->
-        <!-- ===== Experience Section ===== -->
-        <section class="experience"></section>
-        <!-- End Experience Section -->
-        <!-- ===== Certificates Section ===== -->
-        <section class="certificates"></section>
-        <!-- End Certificates Section -->
-        <!-- ===== Reference Section ===== -->
-        <section class="references"></section>
-        <!-- End Reference Section -->
+          </section>
+          <!-- End Certificates Section -->
+          <!-- ===== Reference Section ===== -->
+          <section class="references">
+            <div class="references__card--refererr-1">
+              <p class="references__card__item--designation">Sr, Director</p>
+              <p class="references__card__item--name">Mr. Clay Doe</p>
+              <p class="references__card__item--phone">Phone: +91 1234567890</p>
+              <p class="references__card__item--email">Email: abc@gmail.com</p>
+            </div>
+
+            <div class="references__card--refererr-2">
+              <p class="references__card__item--designation">Sr, Director</p>
+              <p class="references__card__item--name">Mr. Clay Doe</p>
+              <p class="references__card__item--phone">Phone: +91 1234567890</p>
+              <p class="references__card__item--email">Email: abc@gmail.com</p>
+            </div>
+          </section>
+          <!-- End Reference Section -->
+
+          <!-- ====== Languages Section ====== -->
+          <section class="languages">
+            <p class="d-flex justify-content-center">Languages</p>
+            <ul class="languages__list d-flex justify-content-around">
+              <li class="languages__list__item">English</li>
+              <li class="languages__list__item">Malayalam</li>
+            </ul>
+          </section>
+          <!-- End Languages Section -->
+          <!-- ====== Interests Section ====== -->
+          <section class="interests">
+            <p class="d-flex justify-content-center">Interests</p>
+            <div class="row d-flex flex-wrap justify-content-between">
+              <div class="col d-flex col-2 flex-column align-items-center">
+                <box-icon type="solid" name="plane-alt"></box-icon>
+                <p>Travelling</p>
+              </div>
+
+              <div class="col d-flex col-2 flex-column align-items-center">
+                <box-icon name="headphone"></box-icon>
+                <p>Music</p>
+              </div>
+
+              <div class="col d-flex col-2 flex-column align-items-center">
+                <box-icon name="book"></box-icon>
+                <p>Books</p>
+              </div>
+
+              <div class="col d-flex col-2 flex-column align-items-center">
+                <box-icon name="football"></box-icon>
+                <p>Games</p>
+              </div>
+            </div>
+          </section>
+        </div>
+
         <div class="resume-container__mobile__nav">
           <!-- ===== Mobile Nav Bar====== -->
           <div class="mobile-nav">
@@ -194,12 +307,25 @@
             >
               <div class="container-fluid d-flex justify-content-between">
                 <span class="text-start"> Patrick Prakash</span>
-                <box-icon name="grid-alt" class=""></box-icon>
+
+                <button
+                  class="btn grid-btn"
+                  type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvas"
+                  aria-controls="offcanvas"
+                >
+                  <box-icon
+                    name="grid-alt"
+                    data-bs-toggle="offcanvas"
+                    class=""
+                  ></box-icon>
+                </button>
               </div>
             </navbar>
 
             <div
-              class="offcanvas.show offcanvas-bottom"
+              class="offcanvas offcanvas-bottom"
               tabindex="-1"
               id="offcanvas"
               aria-labelledby="offcanvasLabel"
@@ -250,6 +376,7 @@
               </div>
             </div>
           </div>
+
           <!-- End Mobile Nav Bar -->
         </div>
       </div>
@@ -262,11 +389,13 @@
     <!-- The box icons component -->
 
     <!-- The bootstrap bundle -->
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <!-- The bootstrap bundle -->
+
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
