--- a/index.html
+++ b/index.html
@@ -55,37 +55,56 @@
                   alt=""
                 />
 
-                <p class="">Patrick Prakash</p>
-                <p class="">Softwarer Engineer</p>
+                <p class="fs-4 text-nowrap fw-bold pt-3 text-center">
+                  Patrick Prakash
+                </p>
+                <p class="text-nowrap font-monospace text-center">
+                  Software Engineer
+                </p>
 
-                <button class="btn btn-primary">Download</button>
+                <button class="btn btn-outline-secondary d-flex mx-4">
+                  Download
+                </button>
               </div>
 
               <box-icon name="moon" class="m-3 col-1 home-icons"></box-icon>
             </div>
             <div class="home__bottom">
-              <div class="home__bottom__info">
+              <div class="home__bottom__info pt-3">
                 <div
                   class="home__bottom__info__address d-flex align-items-center"
                 >
                   <box-icon name="map"></box-icon>
-                  <span>Rose Villa, Chathamanagalam, Kozhikode</span>
+                  <span class="text-sm-start fw-light"
+                    >Rose Villa, Chathamanagalam, Kozhikode</span
+                  >
                 </div>
                 <div
                   class="home__bottom__info__email d-flex align-items-center"
                 >
                   <box-icon name="message-dots"></box-icon>
-                  <span>patrickprakash8@gmail.com</span>
+                  <span class="text-sm-start">patrickprakash8@gmail.com</span>
                 </div>
                 <div
                   class="home__bottom__info__phone d-flex align-items-center"
                 >
                   <box-icon name="phone"></box-icon>
-                  <span>+91-8129920068</span>
+                  <span class="text-sm-start">+91-8129920068</span>
                 </div>
               </div>
               <div class="home__bottom__social">
-                <p class="d-flex justify-content-center">Social</p>
+                <p
+                  class="
+                    d-flex
+                    justify-content-center
+                    fs-5
+                    text-uppercase
+                    fw-bold
+                    social-txt
+                  "
+                >
+                  Social
+                </p>
                 <div class="home__bottom__social__items">
                   <div
                     class="
@@ -124,33 +143,58 @@
           <!-- End Home Section -->
           <!-- ===== Profile Section ===== -->
           <section id="profile" class="profile">
-            <p class="d-flex justify-content-center">Profile</p>
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Profile
+            </p>
 
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-              corporis quam odit blanditiis sit eveniet suscipit impedit
-              voluptatum eaque repudiandae.
+            <p class="fw-lighter font-monospace d-flex justify-content-center">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ullam
+              quidem sit necessitatibus itaque. Ipsum, consectetur molestiae,
+              voluptates hic qui eaque illum iste quod repellendus eius
+              praesentium, nesciunt dolorem minima ullam amet vitae numquam
+              voluptate asperiores. Corrupti facere excepturi eos sit sapiente
+              debitis, dignissimos explicabo odit tempore eum suscipit nostrum?
             </p>
           </section>
           <!-- End Profile Section -->
           <!-- ===== Education Section ===== -->
           <section id="education" class="education">
-            <p class="d-flex justify-content-center">Education</p>
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Education
+            </p>
 
             <div class="education__cards d-flex flex-column align-items-center">
               <div class="education__card--bachelors">
                 <p class="degree">Bachelors of Technology</p>
-                <p>College</p>
+                <p class="clg">College</p>
                 <p class="year">2018- 2021</p>
               </div>
               <div class="education__card--diploma">
                 <p class="degree">Bachelors of Technology</p>
-                <p>College</p>
+                <p class="clg">College</p>
                 <p class="year">2018- 2021</p>
               </div>
               <div class="education__card--x">
                 <p class="degree">Bachelors of Technology</p>
-                <p>College</p>
+                <p class="clg">College</p>
                 <p class="year">2018- 2021</p>
               </div>
             </div>
@@ -158,7 +202,18 @@
           <!-- End Education Section -->
           <!-- ===== Skills Section ===== -->
           <section id="skills" class="skills">
-            <p class="d-flex justify-content-center">Skills</p>
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Skills
+            </p>
             <div class="skills__list row">
               <div class="skills__list__left col">
                 <ul>
@@ -181,7 +236,18 @@
           <!-- End Skills Section -->
           <!-- ===== Experience Section ===== -->
           <section id="experience" class="experience">
-            <p class="d-flex justify-content-center">Experience</p>
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Experience
+            </p>
             <div
               class="experience__cards d-flex flex-column align-items-center"
             >
@@ -207,10 +273,21 @@
           <!-- End Experience Section -->
           <!-- ===== Certificates Section ===== -->
           <section id="certificates" class="certificates">
-            <p class="d-flex justify-content-center">Certificates</p>
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Certificates
+            </p>
             <div class="certificate__card--web">
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
+              <p class="fw-bold">Lorem ipsum dolor sit amet.</p>
+              <p class="font-monospace">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
                 itaque quam aliquid, tenetur sequi tempore officia consectetur
                 provident molestiae ipsum? Magnam, autem? Et culpa tempore nobis
@@ -226,8 +303,8 @@
               </p>
             </div>
             <div class="certificate__card--android">
-              <p>Lorem ipsum dolor sit amet.</p>
-              <p>
+              <p class="fw-bold">Lorem ipsum dolor sit amet.</p>
+              <p class="font-monospace">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
                 pariatur sint harum, cupiditate eos voluptatem, ad doloribus
                 perspiciatis nam dolore, dolorem cum animi commodi facilis rem.
@@ -244,6 +321,18 @@
           <!-- End Certificates Section -->
           <!-- ===== Reference Section ===== -->
           <section id="references" class="references">
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              References
+            </p>
             <div class="references__card--refererr-1">
               <p class="references__card__item--designation">Sr, Director</p>
               <p class="references__card__item--name">Mr. Clay Doe</p>
@@ -262,7 +351,18 @@
 
           <!-- ====== Languages Section ====== -->
           <section id="languages" class="languages">
-            <p class="d-flex justify-content-center">Languages</p>
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Languages
+            </p>
             <ul class="languages__list d-flex justify-content-around">
               <li class="languages__list__item">English</li>
               <li class="languages__list__item">Malayalam</li>
@@ -271,8 +371,19 @@
           <!-- End Languages Section -->
           <!-- ====== Interests Section ====== -->
           <section id="interests" class="interests">
-            <p class="d-flex justify-content-center">Interests</p>
-            <div class="row d-flex flex-wrap justify-content-between">
+            <p
+              class="
+                d-flex
+                justify-content-center
+                sec-head
+                fs-5
+                text-uppercase
+                fw-bold
+              "
+            >
+              Interests
+            </p>
+            <div class="row d-flex flex-wrap justify-content-between px-4 pt-2">
               <div class="col d-flex col-2 flex-column align-items-center">
                 <box-icon type="solid" name="plane-alt"></box-icon>
                 <p>Travelling</p>
@@ -343,7 +454,7 @@
                     </a>
 
                     <a
-                      class=" btn col-4 d-flex flex-column align-items-center"
+                      class="btn col-4 d-flex flex-column align-items-center"
                       href="#profile"
                     >
                       <box-icon name="user" color="#b2b2b2"></box-icon>
@@ -351,7 +462,7 @@
                     </a>
 
                     <a
-                      class=" btn col-4 d-flex flex-column align-items-center"
+                      class="btn col-4 d-flex flex-column align-items-center"
                       href="#education"
                     >
                       <box-icon name="book" color="#b2b2b2"></box-icon>
